--- a/resources/angular-views/directive-partials/ui-editable-list-container.html
+++ b/resources/angular-views/directive-partials/ui-editable-list-container.html
@@ -1,5 +1,5 @@
 
-<div class="panel panel-default">
+<div class="panel panel-default ui-editable-list-container">
     <div class="panel-heading">
         {{ heading }}
 
@@ -20,7 +20,7 @@
 
             <!-- Working animation -->
             <div ng-switch-when="saving" class="text-center" style="padding: 20px 0;">
-                <i ng-show="isSaving" class="fa fa-spin fa-3x fa-spinner"></i>
+                <i class="fa fa-spin fa-4x fa-spinner"></i>
             </div>
 
             <!-- Model fields -->
