--- a/resources/angular-views/profile/create.html
+++ b/resources/angular-views/profile/create.html
@@ -15,14 +15,170 @@
         <div class="row">
 
             <!-- New profile form -->
-            <div class="col-sm-12 col-md-8">
-                <div data-ng-include="'profile/partials/form.html'"></div>
-            </div>
+            <div class="col-sm-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Profile Details
+                    </div>
 
-            <!-- Profile picture -->
-        	<div class="col-sm-12 col-md-4">
-                <div data-ng-include="'profile/partials/upload-photo.html'"></div>
-        	</div>
+                    <div class="panel-body">
+                        <div class="row">
+
+                            <!-- First name -->
+                            <div class="col-sm-12 col-md-6">
+                                <div class="form-group">
+                                    <input
+                                        type="text"
+                                        ng-model="profile.first_name"
+                                        placeholder="First Name"
+                                        class="form-control"
+                                        required>
+                                </div>
+                            </div>
+
+                            <!-- Last name -->
+                            <div class="col-sm-12 col-md-6">
+                                <div class="form-group">
+                                    <input
+                                        type="text"
+                                        ng-model="profile.last_name"
+                                        placeholder="Last Name"
+                                        class="form-control"
+                                        required>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Height -->
+                        <div class="row form-group">
+                            <div class="col-sm-4 col-md-3 text-right">
+                                Height (ft / in)
+                            </div>
+                            <div class="col-sm-4 col-md-3">
+                                <input
+                                    type="number"
+                                    min="1" max="10"
+                                    ng-model="profile.feet"
+                                    placeholder="Feet"
+                                    class="form-control"
+                                    required>
+                            </div>
+                            <div class="col-sm-4 col-md-3">
+                                <input
+                                    type="number"
+                                    min="0" max="11"
+                                    ng-model="profile.inches"
+                                    placeholder="Inches"
+                                    class="form-control"
+                                    required>
+                            </div>
+                        </div>
+
+                        <!-- Weight -->
+                        <div class="row form-group">
+                            <div class="col-sm-4 col-md-3 text-right">
+                                Weight (lbs)
+                            </div>
+                            <div class="col-sm-4 col-md-3">
+                                <input
+                                    class="form-control"
+                                    ng-model="profile.weight_lbs"
+                                    placeholder="Weight"
+                                    type="number"
+                                    min="1" max="1000" step="0.01"
+                                    required>
+                            </div>
+                        </div>
+
+                        <!-- Date of birth -->
+                        <div class="row form-group">
+                            <div class="col-sm-4 col-md-3 text-right">
+                                Date of Birth
+                            </div>
+                            <div class="col-sm-8 col-md-4">
+                                <input
+                                    class="form-control"
+                                    ng-model="profile.dob"
+                                    placeholder="DOB"
+                                    type="text"
+                                    disabled>
+                            </div>
+                        </div>
+
+                        <!-- Gender -->
+                        <div class="row form-group">
+                            <div class="col-sm-4 col-md-3 text-right">
+                                Gender
+                            </div>
+                            <div class="col-sm-8 col-md-4">
+                                <select ng-model="profile.gender" class="form-control">
+                                    <option value="" ng-selected="profile.gender == ''">(not specified)</option>
+                                    <option value="female" ng-selected="profile.gender == 'female'">Female</option>
+                                    <option value="male" ng-selected="profile.gender == 'male'">Male</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <!-- Email -->
+                        <div class="row form-group">
+                            <div class="col-sm-4 col-md-3 text-right">
+                                Email
+                            </div>
+                            <div class="col-sm-8 col-md-6">
+                                <input
+                                    class="form-control"
+                                    ng-model="profile.email"
+                                    placeholder="email@example.com"
+                                    type="email">
+                            </div>
+                        </div>
+
+                        <!-- Phone number -->
+                        <div class="row form-group">
+                            <div class="col-sm-4 col-md-3 text-right">
+                                Phone
+                            </div>
+                            <div class="col-sm-8 col-md-4">
+                                <input
+                                    class="form-control"
+                                    ng-model="profile.phone"
+                                    placeholder="555-555-5555"
+                                    type="tel">
+                            </div>
+                        </div>
+
+                        <!-- Medical history -->
+                        <div class="row form-group">
+                            <div class="col-sm-4 col-md-3 text-right">
+                                Medical History
+                            </div>
+                            <div class="col-sm-8 col-md-9">
+                                <textarea class="form-control" ng-model="profile.medical_history" placeholder="..."></textarea>
+                            </div>
+                        </div>
+
+                        <!-- Previous injuries -->
+                        <div class="row form-group">
+                            <div class="col-sm-4 col-md-3 text-right">
+                                Previous Injuries
+                            </div>
+                            <div class="col-sm-8 col-md-9">
+                                <textarea class="form-control" ng-model="profile.injuries" placeholder="..."></textarea>
+                            </div>
+                        </div>
+
+                        <!-- Notes -->
+                        <div class="row form-group">
+                            <div class="col-sm-4 col-md-3 text-right">
+                                Other Notes
+                            </div>
+                            <div class="col-sm-8 col-md-9">
+                                <textarea class="form-control" ng-model="profile.notes" placeholder="..."></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Action buttons -->
