--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -89,7 +89,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-sm-12">
-                                {{ profile.underlying_medical || 'No medical information provided.' }}
+                                {{ profile.medical_history || 'No medical information provided.' }}
                             </div>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-sm-12">
-                                {{ profile.previous_injuries || 'No previous injuries' }}
+                                {{ profile.injuries || 'No previous injuries' }}
                             </div>
                         </div>
                     </div>
