Done functionality on uiEditableList directive

--- a/resources/angular-views/dashboard.html
+++ b/resources/angular-views/dashboard.html
@@ -17,8 +17,13 @@
 <br>
 <div class="row">
     <div class="col-sm-12 col-md-4 text-right">
-        <a ng-click="Rover.alert('In Development.')" href="javascript:;" class="btn btn-primary btn-metro text-center">
-            <span>
+        <a
+            ng-click="Rover.alert('In Development.')"
+            href="javascript:;"
+            class="text-center"
+            style="display: inline-block; height: 200px; width: 200px; border: 2px solid #333;">
+
+            <span style="display: inline-block; margin: 75px auto 0;">
                 Upload/Record <br>
                 a Movement
             </span>
@@ -26,8 +31,13 @@
     </div>
 
     <div class="col-sm-12 col-md-4 text-center">
-        <a ng-click="Rover.alert('In Development.')" href="javascript:;" class="btn btn-primary btn-metro text-center">
-            <span>
+        <a
+            ng-click="Rover.alert('In Development.')"
+            href="javascript:;"
+            class="text-center"
+            style="display: inline-block; height: 200px; width: 200px; border: 2px solid #333;">
+
+            <span style="display: inline-block; margin: 75px auto 0;">
                 Analyze <br>
                 a Movement
             </span>
@@ -35,8 +45,13 @@
     </div>
 
     <div class="col-sm-12 col-md-4 text-left">
-        <a ng-click="Rover.alert('In Development.')" href="javascript:;" class="btn btn-primary btn-metro text-center">
-            <span>
+        <a
+            ng-click="Rover.alert('In Development.')"
+            href="javascript:;"
+            class="text-center"
+            style="display: inline-block; height: 200px; width: 200px; border: 2px solid #333;">
+            
+            <span style="display: inline-block; margin: 75px auto 0;">
                 Compare <br>
                 Movements
             </span>
