--- a/resources/angular-views/directive-partials/ui-editable-list-container.html
+++ b/resources/angular-views/directive-partials/ui-editable-list-container.html
@@ -11,6 +11,9 @@
             <span ng-click="edit()" ng-show="state == 'idle'">
                 Edit &nbsp; <i class="fa fa-toggle-off"></i>
             </span>
+            <span ng-show="state == 'saving'" style="color: #ccc;">
+                <i class="fa fa-toggle-off"></i>
+            </span>
         </div>
     </div>
 
