--- a/resources/angular-views/directive-partials/ui-editable-list-item.html
+++ b/resources/angular-views/directive-partials/ui-editable-list-item.html
@@ -34,6 +34,76 @@
                 class="form-control">
         </div>
 
+        <!-- Length -->
+        <div ng-switch-when="length">
+
+            <!-- Display string & unit selector -->
+            <div ng-show="state != 'editing'" class="row no-gutter">
+                <div class="col-sm-1">
+                    <div class="dropdown text-center">
+                        <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true">
+                            <i class="fa fa-cog" style="color: #ccc;"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li ng-repeat="unit in units">
+                                <a ng-click="updateUnit(unit)" href="javascript:;">
+                                    {{ unit }}
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-11">
+                    <b>
+                        {{ data.lengthStr }}
+                    </b>
+                </div>
+            </div>
+
+            <!-- Feet & inches -->
+            <div class="row" ng-show="state == 'editing' && config.unitForLength == 'ft/in'">
+                <div class="col-sm-6">
+                    <div class="input-group">
+                        <input
+                            ng-model="data.lengthFeet"
+                            ng-disabled="isDisabled"
+                            ng-required="isRequired"
+                            ng-blur="updateModel()"
+                            ng-change="updateModel()"
+                            type="number" min="1" max="10"
+                            class="form-control">
+                        <span class="input-group-addon">&apos;</span>
+                    </div>
+                </div>
+
+                <div class="col-sm-6">
+                    <div class="input-group">
+                        <input
+                            ng-model="data.lengthInches"
+                            ng-disabled="isDisabled"
+                            ng-required="isRequired"
+                            ng-blur="updateModel()"
+                            ng-change="updateModel()"
+                            type="number" min="0" max="11"
+                            class="form-control">
+                        <span class="input-group-addon">&quot;</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- All other supported units -->
+            <div class="input-group" ng-show="state == 'editing' && config.unitForLength != 'ft/in'">
+                <span class="input-group-addon">{{ config.unitForLength }}</span>
+                <input
+                    ng-model="data.lengthVal"
+                    ng-disabled="isDisabled"
+                    ng-required="isRequired"
+                    ng-blur="updateModel()"
+                    type="number" step="0.01"
+                    class="form-control">
+            </div>
+        </div>
+
         <!-- Gender -->
         <div ng-switch-when="gender">
             <b ng-show="state != 'editing'">
@@ -51,6 +121,45 @@
                 <option value="female">Female</option>
                 <option value="male">Male</option>
             </select>
+        </div>
+
+        <!-- Mass -->
+        <div ng-switch-when="mass">
+
+            <!-- Display string & unit selector -->
+            <div ng-show="state != 'editing'" class="row no-gutter">
+                <div class="col-sm-1">
+                    <div class="dropdown text-center">
+                        <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true">
+                            <i class="fa fa-cog" style="color: #ccc;"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li ng-repeat="unit in units">
+                                <a ng-click="updateUnit(unit)" href="javascript:;">
+                                    {{ unit }}
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-11">
+                    <b>
+                        {{ data.massStr }}
+                    </b>
+                </div>
+            </div>
+
+            <!-- Edit field -->
+            <div class="input-group" ng-show="state == 'editing'">
+                <span class="input-group-addon">{{ config.unitForMass }}</span>
+                <input
+                    ng-model="data.massVal"
+                    ng-disabled="isDisabled"
+                    ng-required="isRequired"
+                    ng-blur="updateModel()"
+                    type="number" step="0.01"
+                    class="form-control">
+            </div>
         </div>
 
         <!-- Default -->
