Preparing tags lookup feature

--- a/resources/angular-views/directive-partials/ui-editable-list-item.html
+++ b/resources/angular-views/directive-partials/ui-editable-list-item.html
@@ -171,7 +171,7 @@
             <div ng-show="state == 'editing'">
                 <selectize
                     ng-model="model[key]"
-                    class="form-control"
+                    class="form-control text-left"
                     config="config"
                     options="options">
                 </selectize>
