Enabled splitting of SASS files for maintainability + bug fixes + UX updates

--- a/resources/angular-views/directive-partials/ui-editable-list-item.html
+++ b/resources/angular-views/directive-partials/ui-editable-list-item.html
@@ -107,7 +107,7 @@
         <!-- Gender -->
         <div ng-switch-when="gender">
             <b ng-show="state != 'editing'">
-                {{ model[key] }}
+                {{ display }}
             </b>
 
             <select
