--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -80,7 +80,7 @@
 
         <!-- General notes -->
         <div class="row">
-    		<div class="col-sm-12">
+    		<div class="col-sm-12 col-md-4">
                 <ui-editable-field
                     data-heading="Medical Information"
                     data-model="global.state.profile.selected"
@@ -89,7 +89,9 @@
                     data-save="saveProfileDetails"
                     data-save-callback="saveProfileDetailsCallback">
                 </ui-editable-field>
+            </div>
 
+            <div class="col-sm-12 col-md-4">
                 <ui-editable-field
                     data-heading="Previous Injuries"
                     data-model="global.state.profile.selected"
@@ -98,7 +100,9 @@
                     data-save="saveProfileDetails"
                     data-save-callback="saveProfileDetailsCallback">
                 </ui-editable-field>
+            </div>
 
+            <div class="col-sm-12 col-md-4">
                 <ui-editable-field
                     data-heading="Other Notes"
                     data-model="global.state.profile.selected"
