--- a/resources/angular-views/dashboard.html
+++ b/resources/angular-views/dashboard.html
@@ -10,61 +10,63 @@
 </div>
 
 <!-- Main tasks -->
-<br>
-<br>
-<br>
-<br>
-<br>
 <div class="row">
-    <div class="col-sm-12 col-md-4 text-right">
-        <a
-            ng-click="Rover.alert('In Development.')"
-            href="javascript:;"
-            class="text-center"
-            style="display: inline-block; height: 200px; width: 200px; border: 2px solid #333;">
-
-            <span style="display: inline-block; margin: 75px auto 0;">
-                Upload/Record <br>
-                a Movement
-            </span>
-        </a>
-    </div>
-
-    <div class="col-sm-12 col-md-4 text-center">
-        <a
-            ng-click="Rover.alert('In Development.')"
-            href="javascript:;"
-            class="text-center"
-            style="display: inline-block; height: 200px; width: 200px; border: 2px solid #333;">
-
-            <span style="display: inline-block; margin: 75px auto 0;">
+    <div class="col-sm-12 col-md-2 col-md-offset-3 text-left">
+        <a ng-click="Rover.alert('In Development.')" href="javascript:;" class="temp-landing-badge">
+            <span>
                 Analyze <br>
                 a Movement
             </span>
         </a>
     </div>
 
-    <div class="col-sm-12 col-md-4 text-left">
-        <a
-            ng-click="Rover.alert('In Development.')"
-            href="javascript:;"
-            class="text-center"
-            style="display: inline-block; height: 200px; width: 200px; border: 2px solid #333;">
-            
-            <span style="display: inline-block; margin: 75px auto 0;">
-                Compare <br>
-                Movements
+    <div class="col-sm-12 col-md-2 text-center">
+        <a ng-click="Rover.alert('In Development.')" href="javascript:;" class="temp-landing-badge">
+            <span>
+                Compare Two or<br>
+                More Movements
+            </span>
+        </a>
+    </div>
+
+    <div class="col-sm-12 col-md-2 text-right">
+        <a ng-click="Rover.alert('In Development.')" href="javascript:;" class="temp-landing-badge">
+            <span>
+                Compare FMS <br>
+                Results
+            </span>
+        </a>
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-12 col-md-2 col-md-offset-3 text-left">
+        <a href="#/import" class="temp-landing-badge">
+            <span>
+                Upload One or <br>
+                More Movements
+            </span>
+        </a>
+    </div>
+
+    <div class="col-sm-12 col-md-2 text-center">
+        <a ng-click="Rover.alert('In Development.')" href="javascript:;" class="temp-landing-badge">
+            <span>
+                Record a Live<br>
+                Movement
+            </span>
+        </a>
+    </div>
+
+    <div class="col-sm-12 col-md-2 text-right">
+        <a ng-click="Rover.alert('In Development.')" href="javascript:;" class="temp-landing-badge">
+            <span>
+                Start a FMS
             </span>
         </a>
     </div>
 </div>
 
 <!-- Quick actions -->
-<br>
-<br>
-<br>
-<br>
-<br>
 <div class="row">
     <div class="col-sm-12 text-center">
         <div class="btn-group">
