Created new UX pages + organized SASS files

--- a/resources/angular-views/dashboard.html
+++ b/resources/angular-views/dashboard.html
@@ -12,7 +12,7 @@
 <!-- Main tasks -->
 <div class="row">
     <div class="col-sm-12 col-md-2 col-md-offset-3 text-left">
-        <a ng-click="Rover.alert('In Development.')" href="javascript:;" class="temp-landing-badge">
+        <a href="#/analyze" class="temp-landing-badge">
             <span>
                 Analyze <br>
                 a Movement
@@ -21,7 +21,7 @@
     </div>
 
     <div class="col-sm-12 col-md-2 text-center">
-        <a ng-click="Rover.alert('In Development.')" href="javascript:;" class="temp-landing-badge">
+        <a href="#/compare" class="temp-landing-badge">
             <span>
                 Compare Two or<br>
                 More Movements
@@ -30,7 +30,7 @@
     </div>
 
     <div class="col-sm-12 col-md-2 text-right">
-        <a ng-click="Rover.alert('In Development.')" href="javascript:;" class="temp-landing-badge">
+        <a href="#/compare" class="temp-landing-badge">
             <span>
                 Compare FMS <br>
                 Results
@@ -49,7 +49,7 @@
     </div>
 
     <div class="col-sm-12 col-md-2 text-center">
-        <a ng-click="Rover.alert('In Development.')" href="javascript:;" class="temp-landing-badge">
+        <a href="#/capture" class="temp-landing-badge">
             <span>
                 Record a Live<br>
                 Movement
@@ -58,9 +58,9 @@
     </div>
 
     <div class="col-sm-12 col-md-2 text-right">
-        <a ng-click="Rover.alert('In Development.')" href="javascript:;" class="temp-landing-badge">
+        <a href="#/fms" class="temp-landing-badge">
             <span>
-                Start a FMS
+                An FMS Test
             </span>
         </a>
     </div>
