--- a/resources/angular-views/navigation.html
+++ b/resources/angular-views/navigation.html
@@ -15,17 +15,22 @@
             data-step="1"
             data-intro="This is a shortcut to your dashboard."
             data-position="right">
-            <a href="#/dashboard"><span>dashboard</span></a>
+            <a href="#/dashboard"><span>Dashboard</span></a>
         </li>
 
         <!-- List of groups -->
 		<li>
-            <a href="#/group/list"><span>teams</span></a>
+            <a href="#/group/list"><span>Teams</span></a>
+        </li>
+
+        <!-- List of movements -->
+		<li>
+            <a href="#/organize"><span>Organize</span></a>
         </li>
 
         <!-- Submit movement data form -->
 		<li>
-            <a href="#/submit-movement"><span>submit movement data</span></a>
+            <a href="#/submit-movement"><span>Submit movement data</span></a>
         </li>
 
         <!-- Submit FMS test form -->
